--- a/index.html
+++ b/index.html
@@ -126,38 +126,38 @@
 			    </ul>
 		</div>
 		<!--//End-slider-->
-		<!--start-about->
+		<!--start-about-->
 		<div id="about" class="about">
 			<div class="container">
 				<h2>About</h2>
 				<p class="wellcome-note-head"><label>We are a full Services Digital Agency. </label>We Design and develop <span>Websites,</span><span>Applications,</span><span>Mobile Solutions,</span> and more</p>
 				<p class="wellcome-note-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In luctus velit quis risus eleifend bibendum. Aenean dictum felis in eros ultrices eleifend. Phasellus ultrices congue feugiat. Vestibulum sed pretium sem, sed venenatis nibh. Phasellus nec tincidunt neque. Proin accumsan sagittis lacus ut lobortis.Proin molestie cursus tortor in eleifend. Suspendisse potenti.</p>
-			<!--start-about-grids-->
-			<div class="about-grids">
-				<div class="col-md-3 about-grid">
-					<span class="about-icon"> </span>
-					<h3><a href="#"><label>Reflexion</label> idea</a></h3>
-					<p>velit est, tempus in nulla sed, convallis porttitor lacus. Curabitur sed egestas eros. Donec convallis ligula eu diam elementum, quis tempor sem tincidunt.</p>
+				<!--start-about-grids-->
+				<div class="about-grids">
+					<div class="col-md-3 about-grid">
+						<span class="about-icon"> </span>
+						<h3><a href="#"><label>Reflexion</label> idea</a></h3>
+						<p>velit est, tempus in nulla sed, convallis porttitor lacus. Curabitur sed egestas eros. Donec convallis ligula eu diam elementum, quis tempor sem tincidunt.</p>
+					</div>
+					<div class="col-md-3 about-grid">
+						<span class="about-icon1"> </span>
+						<h3><a href="#"><label>Conception</label> Design</a></h3>
+						<p>velit est, tempus in nulla sed, convallis porttitor lacus. Curabitur sed egestas eros. Donec convallis ligula eu diam elementum, quis tempor sem tincidunt.</p>
+					</div>
+					<div class="col-md-3 about-grid">
+						<span class="about-icon2"> </span>
+						<h3><a href="#"><label>Codage</label> Develop</a></h3>
+						<p>velit est, tempus in nulla sed, convallis porttitor lacus. Curabitur sed egestas eros. Donec convallis ligula eu diam elementum, quis tempor sem tincidunt.</p>
+					</div>
+					<div class="col-md-3 about-grid">
+						<span class="about-icon3"> </span>
+						<h3><a href="#"><label>Efficacite</label> Rapidite</a></h3>
+						<p>velit est, tempus in nulla sed, convallis porttitor lacus. Curabitur sed egestas eros. Donec convallis ligula eu diam elementum, quis tempor sem tincidunt.</p>
+					</div>
+					<div class="clearfix"> </div>
 				</div>
-				<div class="col-md-3 about-grid">
-					<span class="about-icon1"> </span>
-					<h3><a href="#"><label>Conception</label> Design</a></h3>
-					<p>velit est, tempus in nulla sed, convallis porttitor lacus. Curabitur sed egestas eros. Donec convallis ligula eu diam elementum, quis tempor sem tincidunt.</p>
-				</div>
-				<div class="col-md-3 about-grid">
-					<span class="about-icon2"> </span>
-					<h3><a href="#"><label>Codage</label> Develop</a></h3>
-					<p>velit est, tempus in nulla sed, convallis porttitor lacus. Curabitur sed egestas eros. Donec convallis ligula eu diam elementum, quis tempor sem tincidunt.</p>
-				</div>
-				<div class="col-md-3 about-grid">
-					<span class="about-icon3"> </span>
-					<h3><a href="#"><label>Efficacite</label> Rapidite</a></h3>
-					<p>velit est, tempus in nulla sed, convallis porttitor lacus. Curabitur sed egestas eros. Donec convallis ligula eu diam elementum, quis tempor sem tincidunt.</p>
-				</div>
-				<div class="clearfix"> </div>
 			</div>
-			</div>
-			<!----//End-about-grids----->
+			<!--//End-about-grids-->
 		</div>
 		<!----//End-about----->
 		<!----start-services---->
@@ -193,12 +193,12 @@
 			<!----//End-servicves-list---->
 			</div>
 		</div>
-        <div class="copyrights">Collect from <a href="http://www.cssmoban.com/"  title="ÍøÕ¾Ä£°å">ÍøÕ¾Ä£°å</a></div>
+        <div class="copyrights">Collect from <a href="http://www.cssmoban.com/"  title="">ÍøÕ¾Ä£°å</a></div>
 		<!----//End-services---->
 		<!--start-portfolio-->
 		<div id="port" class="portfolio portfolio-box">
 			<div class="container">
-				<h3>Portfolio<label> </label></h3>
+				<h3>My Work<label> </label></h3>
 			<!----start-portfolio---->
          <div id="port" class="container portfolio-main">
 	        	<!-- start-portfolio-script-->
@@ -243,109 +243,120 @@
 					<!--//End-portfolio-script-->
 					<ul id="filters" class="clearfix">
 						<li><span class="filter active" data-filter="app card icon logo web">All</span> /</li>
-						<li><span class="filter" data-filter="app">DESIGN</span> /</li>
-						<li><span class="filter" data-filter="card">PHOTOGRAPHY</span> /</li>
-						<li><span class="filter" data-filter="icon">VIDEO</span> /</li>
+						<li><span class="filter" data-filter="app">Design</span> /</li>
+						<li><span class="filter" data-filter="card">Game</span> /</li>
+						<li><span class="filter" data-filter="icon">Angular</span> /</li>
 						<li><span class="filter" data-filter="app">PRINT</span></li>
 					</ul>
 					<div id="portfoliolist">
+					<!-- 锤子 -->
 					    <div class="portfolio logo1 mix_all" data-cat="logo" style="display: inline-block; opacity: 1;">
 							<div class="portfolio-wrapper">		
-								<a data-toggle="modal" data-target=".bs-example-modal-md" href="#" class="b-link-stripe b-animate-go  thickbox">
-							     <img class="p-img" src="images/p1.jpg" /><div class="b-wrapper"><h2 class="b-animate b-from-left    b-delay03 "><img src="images/link-ico.png" alt="" ></h2>
+								<a data-toggle="modal" data-target=".bs-example-modal-md" href="http://ladykillertao.github.io/chuizi" class="b-link-stripe b-animate-go  thickbox">
+							     <img class="p-img" src="image/chuizi.jpg" /><div class="b-wrapper"><h2 class="b-animate b-from-left    b-delay03 "><img src="images/link-ico.png" alt="" ></h2>
 							  	</div></a>
 			                </div>
 			                <div class="port-info">
-			                	<h4><a href="#"> Flat Pixel</a></h4>
+			                	<h4><a href="#">Smartisan</a></h4>
 			                	<span>Website</span>
 			                </div>
-					    </div>				
+					    </div>	
+					<!-- 天猫 -->
 						<div class="portfolio app mix_all" data-cat="app" style="display: inline-block; opacity: 1;">
 							<div class="portfolio-wrapper">		
-								<a data-toggle="modal" data-target=".bs-example-modal-md" href="#" class="b-link-stripe b-animate-go  thickbox">
+								<a data-toggle="modal" data-target=".bs-example-modal-md" href="http://ladykillertao.github.io/tianmao" class="b-link-stripe b-animate-go  thickbox">
 							     <img class="p-img" src="image/tianmao.png" /><div class="b-wrapper"><h2 class="b-animate b-from-left    b-delay03 "><img src="images/link-ico.png" alt="" ></h2>
 							  	</div></a>
 			                </div>
 			                 <div class="port-info">
-			                	<h4><a href="#">radoslav holan</a></h4>
+			                	<h4><a href="#">Tian Mao</a></h4>
 			                	<span>Website</span>
 			                </div>
-						</div>		
+						</div>
+					<!-- 音乐 -->
 						<div class="portfolio web mix_all" data-cat="web" style="display: inline-block; opacity: 1;">
 							<div class="portfolio-wrapper">		
-								<a data-toggle="modal" data-target=".bs-example-modal-md" href="#" class="b-link-stripe b-animate-go  thickbox">
-							     <img class="p-img" src="image/1haodian.jpg" /><div class="b-wrapper"><h2 class="b-animate b-from-left    b-delay03 "><img src="images/link-ico.png" alt="" ></h2>
-							  	</div></a>
-			                </div>
-			                <div class="port-info">
-			                	<h4><a href="#">Apemanboards</a></h4>
-			                	<span>Website</span>
-			                </div>
-						</div>				
-						<div class="portfolio icon mix_all" data-cat="icon" style="display: inline-block; opacity: 1;">
-							<div class="portfolio-wrapper">		
-								<a data-toggle="modal" data-target=".bs-example-modal-md" href="#" class="b-link-stripe b-animate-go  thickbox">
-							     <img class="p-img" src="images/p4.jpg" /><div class="b-wrapper"><h2 class="b-animate b-from-left    b-delay03 "><img src="images/link-ico.png" alt=""/></h2>
-							  	</div></a>
-			                </div>
-			                 <div class="port-info">
-			                	<h4><a href="#"> Flat Pixel</a></h4>
-			                	<span>Website</span>
-			                </div>
-						</div>	
-						<div class="portfolio app mix_all" data-cat="app" style="display: inline-block; opacity: 1;">
-							<div class="portfolio-wrapper">		
-								<a data-toggle="modal" data-target=".bs-example-modal-md" href="#" class="b-link-stripe b-animate-go  thickbox">
-							     <img class="p-img" src="image/canvas-fir.jpg"  /><div class="b-wrapper"><h2 class="b-animate b-from-left    b-delay03 "><img src="images/link-ico.png" alt=""></h2>
-							  	</div></a>
-			                </div>
-			                 <div class="port-info">
-			                	<h4><a href="#"> radoslav holan</a></h4>
-			                	<span>Website</span>
-			                </div>
-						</div>			
-						<div class="portfolio card mix_all" data-cat="card" style="display: inline-block; opacity: 1;">
-							<div class="portfolio-wrapper">		
-								<a data-toggle="modal" data-target=".bs-example-modal-md" href="#" class="b-link-stripe b-animate-go  thickbox">
-							     <img class="p-img" src="images/p6.jpg" /><div class="b-wrapper"><h2 class="b-animate b-from-left    b-delay03 "><img src="images/link-ico.png" alt=""/></h2>
-							  	</div></a>
-			                </div>
-			                 <div class="port-info">
-			                	<h4><a href="#">Apemanboards</a></h4>
-			                	<span>Website</span>
-			                </div>
-						</div>	
-						<div class="portfolio icon mix_all" data-cat="icon" style="display: inline-block; opacity: 1;">
-							<div class="portfolio-wrapper">		
-								<a data-toggle="modal" data-target=".bs-example-modal-md" href="#" class="b-link-stripe b-animate-go  thickbox">
+								<a data-toggle="modal" data-target=".bs-example-modal-md" href="http://ladykillertao.github.io/QQmusic" class="b-link-stripe b-animate-go  thickbox">
 							     <img class="p-img" src="image/QQmusic.jpg" /><div class="b-wrapper"><h2 class="b-animate b-from-left    b-delay03 "><img src="images/link-ico.png" alt="" ></h2>
 							  	</div></a>
 			                </div>
-			                 <div class="port-info">
-			                	<h4><a href="#"> Flat Pixel</a></h4>
+			                <div class="port-info">
+			                	<h4><a href="#">QQ Music</a></h4>
 			                	<span>Website</span>
 			                </div>
-						</div>	
-						<div class="portfolio app mix_all" data-cat="app" style="display: inline-block; opacity: 1;">
+						</div>
+					<!-- 画板 -->
+
+						<div class="portfolio icon mix_all" data-cat="icon" style="display: inline-block; opacity: 1;">
 							<div class="portfolio-wrapper">		
-								<a data-toggle="modal" data-target=".bs-example-modal-md" href="#" class="b-link-stripe b-animate-go  thickbox">
-							     <img class="p-img" src="image/chuizi.jpg"/><div class="b-wrapper"><h2 class="b-animate b-from-left    b-delay03 "><img src="images/link-ico.png" alt="" ></h2>
+								<a data-toggle="modal" data-target=".bs-example-modal-md" href="http://ladykillertao.github.io/angular-sketch" class="b-link-stripe b-animate-go  thickbox">
+							     <img class="p-img" src="image/sketch.png" /><div class="b-wrapper"><h2 class="b-animate b-from-left    b-delay03 "><img src="images/link-ico.png" alt=""/></h2>
 							  	</div></a>
 			                </div>
 			                 <div class="port-info">
-			                	<h4><a href="#">radoslav holan</a></h4>
+			                	<h4><a href="#"> Sketch</a></h4>
+			                	<span>Angular</span>
+			                </div>
+						</div>
+					<!--1号店  -->	
+						<div class="portfolio app mix_all" data-cat="app" style="display: inline-block; opacity: 1;">
+							<div class="portfolio-wrapper">		
+								<a data-toggle="modal" data-target=".bs-example-modal-md" href="http://ladykillertao.github.io/1-dian" class="b-link-stripe b-animate-go  thickbox">
+							     <img class="p-img" src="image/1haodian.jpg"  /><div class="b-wrapper"><h2 class="b-animate b-from-left    b-delay03 "><img src="images/link-ico.png" alt=""></h2>
+							  	</div></a>
+			                </div>
+			                 <div class="port-info">
+			                	<h4><a href="#">1 Hao Dian</a></h4>
 			                	<span>Website</span>
 			                </div>
-						</div>			
+						</div>	
+					<!-- 五子棋 -->
 						<div class="portfolio card mix_all" data-cat="card" style="display: inline-block; opacity: 1;">
 							<div class="portfolio-wrapper">		
+								<a data-toggle="modal" data-target=".bs-example-modal-md" href="http://ladykillertao.github.io/canvas-fir" class="b-link-stripe b-animate-go  thickbox">
+							     <img class="p-img" src="image/canvas-fir.jpg" /><div class="b-wrapper"><h2 class="b-animate b-from-left    b-delay03 "><img src="images/link-ico.png" alt=""/></h2>
+							  	</div></a>
+			                </div>
+			                 <div class="port-info">
+			                	<h4><a href="#">Five-in-a-row</a></h4>
+			                	<span>Game</span>
+			                </div>
+						</div>
+					<!--icloud  -->
+
+						<div class="portfolio icon mix_all" data-cat="icon" style="display: inline-block; opacity: 1;">
+							<div class="portfolio-wrapper">		
 								<a data-toggle="modal" data-target=".bs-example-modal-md" href="#" class="b-link-stripe b-animate-go  thickbox">
+							     <img class="p-img" src="image/icloud.png" /><div class="b-wrapper"><h2 class="b-animate b-from-left    b-delay03 "><img src="images/link-ico.png" alt="" ></h2>
+							  	</div></a>
+			                </div>
+			                 <div class="port-info">
+			                	<h4><a href="#"> Icloud</a></h4>
+			                	<span>Angular</span>
+			                </div>
+						</div>	
+					<!-- 小米 -->
+						<div class="portfolio app mix_all" data-cat="app" style="display: inline-block; opacity: 1;">
+							<div class="portfolio-wrapper">		
+								<a data-toggle="modal" data-target=".bs-example-modal-md" href="http://ladykillertao.github.io/mini" class="b-link-stripe b-animate-go  thickbox">
+							     <img class="p-img" src="image/mini.jpg"/><div class="b-wrapper"><h2 class="b-animate b-from-left    b-delay03 "><img src="images/link-ico.png" alt="" ></h2>
+							  	</div></a>
+			                </div>
+			                 <div class="port-info">
+			                	<h4><a href="#">Xiao Mi</a></h4>
+			                	<span>Website</span>
+			                </div>
+						</div>	
+                     <!-- 像素鸟 -->
+						<div class="portfolio card mix_all" data-cat="card" style="display: inline-block; opacity: 1;">
+							<div class="portfolio-wrapper">		
+								<a data-toggle="modal" data-target=".bs-example-modal-md" href="http://ladykillertao.github.io/fly-bird" class="b-link-stripe b-animate-go  thickbox">
 							     <img class="p-img" src="image/fly-bird.png" /><div class="b-wrapper"><h2 class="b-animate b-from-left    b-delay03 "><img src="images/link-ico.png" alt="" ></h2>
 							  	</div></a>
 			                </div>
 			                 <div class="port-info">
-			                	<h4><a href="#"> Apemanboards</a></h4>
-			                	<span>Website</span>
+			                	<h4><a href="#">Flapp Bird</a></h4>
+			                	<span>Game</span>
 			                </div>
 						</div>
 						<div class="clearfix"> </div>	
@@ -355,9 +366,9 @@
 		</div>
 		<div class="clearfix"> </div>
 		</div>
-         <!----//End-portfolio---->
-         <!-----start-testmonials---->
-         <div class="testmonials">
+         <!--//End-portfolio-->
+         <!--start-testmonials-->
+        <div class="testmonials">
          	<div class="container">
 	         	<div class="client-pic col-md-4">
 	         		<img src="images/client.jpg" title="name" />
@@ -393,11 +404,11 @@
 				  </div>
 	         	</div>
 	         	<div class="clearfix"> </div>
-         	 </div>
-         </div>
-          <!-----//End-testmonials---->
-		<!----//End-portfolio----->
-		<!-----start-team----->
+         	</div>
+        </div>
+          <!--//End-testmonials-->
+		<!--//End-portfolio-->
+		<!--start-team-->
 		<div id="team" class="team">
 			<div class="container">
 				<div class="team-members text-center">
@@ -437,8 +448,8 @@
 				</div>
 			</div>
 		</div>
-		<!-----//End-team----->
-		<!-----start-brand-carsuals------>
+		<!--//End-team-->
+		<!--start-brand-carsuals-->
 		<script type="text/javascript" src="js/jquery.flexisel.js"></script>
 		<div class="brand-carsuals">
 			<ul id="flexiselDemo3">
@@ -662,12 +673,12 @@
 				<!-----//End-contact-social---->
 		</div>
 		</div>
-		<!----//End-contact---->
-		<!----start-copy-right--->
+		<!--//End-contact-->
+		<!--start-copy-right-->
 		<div class="copy-right">
 			<div class="container">
 				<p>Copyright &copy; 2014.Company name All rights reserved.<a target="_blank" href="http://www.cssmoban.com/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
-					<script type="text/javascript">
+			<script type="text/javascript">
 				$(document).ready(function() {
 					/*
 					var defaults = {
@@ -685,8 +696,8 @@
 				<a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
 			</div>
 		</div>
-		<!----//End-copy-right--->
-		<!----//End-container------>
+		<!--//End-copy-right->
+		<!--//End-container-->
 
 </body>
 </html>
