--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 			      </li>
 			      <li><img src="images/slider-img2.jpg" alt="">
 			      	<div class="slid-info">
-			      		<h1>你瞅啥！</h1>	
+			      		<h1>短歌行！</h1>	
 			      		<p>
 			      		对酒当歌,人生几何！譬如朝露,去日苦多.
 			      		慨当以慷,忧思难忘.何以解忧？唯有杜康.
@@ -227,7 +227,7 @@
 			      </li>
 			      <li><img src="images/slider-img1.jpg" alt="">
 			      	<div class="slid-info">
-			      		<h1>瞅你咋地！</h1>
+			      		<h1>满江红！</h1>
 			      		<p>怒发冲冠,凭阑处、潇潇雨歇.抬望眼、仰天长啸,壮怀激烈.三十功名尘与土,八千里路云和月.莫等闲,白了少年头,空悲切.</p>
 			      	</div>
 			      </li>
