--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 			<div class="services-list text-center">
 				<ul class="list-unstyled list-inline">
 					<li>
-						<a href="#"><span class="service-icon"> </span><label>Mobile</label></a>
+						<a href="#"><span class="service-icon"></span><label>Mobile</label></a>
 					</li>
 					<li>
 						<a href="#"><span class="service-icon1"> </span><label>Design</label></a>
@@ -516,7 +516,7 @@
 			<div class="container">
 				<div class="team-members text-center">
 					<div class="col-md-4 team-member">
-						<a class="member-pic" href="#"><img src="images/t1.jpg" title="member-name" /></a>
+						<a class="member-pic" href="#"><img src="image/niwu.png" title="member-name" /></a>
 						<h3><a href="#">Bruce Wayne</a></h3>
 						<span>Designer</span>
 						<p>vel egestas diam dui nec mauris. Sed tincidunt felis at feugiat euismod. Praesent lacinia posuere massa. Proin quis purus in neque aliquam .</p>
@@ -527,7 +527,7 @@
 						</ul>
 					</div>
 					<div class="col-md-4 team-member">
-						<a class="member-pic" href="#"><img src="images/t2.jpg" title="member-name" /></a>
+						<a class="member-pic" href="#"><img src="image/lowpoly.png" title="member-name" /></a>
 						<h3><a href="#">Bruce Wayne</a></h3>
 						<span>Designer</span>
 						<p>vel egestas diam dui nec mauris. Sed tincidunt felis at feugiat euismod. Praesent lacinia posuere massa. Proin quis purus in neque aliquam .</p>
@@ -538,7 +538,7 @@
 						</ul>
 					</div>
 					<div class="col-md-4 team-member">
-						<a class="member-pic" href="#"><img src="images/t3.jpg" title="member-name" /></a>
+						<a class="member-pic" href="#"><img src="image/niwu2.png" title="member-name" /></a>
 						<h3><a href="#">Bruce Wayne</a></h3>
 						<span>Designer</span>
 						<p>vel egestas diam dui nec mauris. Sed tincidunt felis at feugiat euismod. Praesent lacinia posuere massa. Proin quis purus in neque aliquam .</p>
@@ -556,10 +556,10 @@
 		<script type="text/javascript" src="js/jquery.flexisel.js"></script>
 		<div class="brand-carsuals">
 			<ul id="flexiselDemo3">
-			    <li><img src="images/b-logo.png" /></li>
-			    <li><img src="images/b-logo.png" /></li>
-			    <li><img src="images/b-logo.png" /></li>
-			    <li><img src="images/b-logo.png" /></li>                                                 
+			    <li><img src="image/bianping1.png" /></li>
+			    <li><img src="image/bianping2.png" /></li>
+			    <li><img src="image/bianping3.png" /></li>
+			    <li><img src="image/bianping4.png" /></li>                                                 
 			</ul>   
 			<script type="text/javascript">
 				$(window).load(function() {
