--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 
 						<div class="portfolio icon mix_all" data-cat="icon" style="display: inline-block; opacity: 1;">
 							<div class="portfolio-wrapper">		
-								<a data-toggle="modal" data-target=".bs-example-modal-md" href="http://ladykillertao.github.io/angular-sketch" class="b-link-stripe b-animate-go  thickbox">
+								<a data-toggle="modal" data-target=".bs-example-modal-md" href="http://ladykillertao.github.io/sketch" class="b-link-stripe b-animate-go  thickbox">
 							     <img class="p-img" src="image/sketch.png" /><div class="b-wrapper"><h2 class="b-animate b-from-left    b-delay03 "><img src="images/link-ico.png" alt=""/></h2>
 							  	</div></a>
 			                </div>
