--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 		 <!-- start-smoth-scrolling-->
 		<script type="text/javascript" src="js/move-top.js"></script>
 		<script type="text/javascript" src="js/easing.js"></script>
-		<!-- <script src='js/jquery1.12.1.js'></script>
-		<script src="js/index.js"></script> -->
+		
 		
 		<!---- start-smoth-scrolling---->
 		 <!-- Custom Theme files -->
@@ -119,7 +118,7 @@
 		<!--start-about-->
 		<div id="about" class="about testmonials">
 			<div class="container">
-				<h2>About Me/关于我</h2>
+				<h2>About Me/关于我 <label ></label></h2>
 				
 			
 	         	<div class="container">
@@ -246,7 +245,7 @@
 					</div>
 					<div class="skills">
 						<div class="title">
-							<span>angular</span><span>85%</span>
+							<span>Angular</span><span>85%</span>
 						</div>
 
 
