--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 			      		<p>I'm Peng Jiang Tao</p>
 			      		<p>欢迎来到我的世界！</p>
 			      		<p>我叫彭江涛</p>
+			      		<p>自己强才叫强！</p>
 			      		<span class="submit-btn"><a href="http://ladykillertao.github.io/jianli/"><input type="submit" value="详情"></a></span>
 			      	</div>
 			      </li>
