--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 			
 	         	<div class="container">
 		         	<div class="client-pic col-md-4">
-		         		<img src="" alt="">
+		         		<img src="image/me.png" alt="">
 		         	</div>
 		         	<div class="client-sys col-md-8">
 		         		<!----start-testmonial-slider---->
